# ilo-sona

./: .dockerignore  .gitignore  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yml  pyproject.toml  sample.env
ilo/: __main__.py
ilo/cogs/: translation.py
src/ilo/: __main__.py  bot.py  db.py  ui.py
src/ilo/cogs/: translation.py
