[tool.poetry]
name = "ilo"
version = "0.1.0"
description = ""
authors = ["Mazzie <mazziechai@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
py-cord = "^2.1.3"
mongoengine = "^0.24.2"
python-dateutil = "^2.8.2"

[tool.poetry.dev-dependencies]
pre-commit = "^2.20.0"
isort = "^5.10.1"
black = "^22.8.0"
flake9 = "^3.8.3"

[tool.isort]
profile = "black"
multi_line_output = 3

[tool.flake8]
max-line-length = 88
extend-ignore = ["E203", "E501", "F722"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
